Ship pack 0.0.5 with Polymorph 0.49.10 so EMI still boots.
Co-authored-by: Cursor <cursoragent@cursor.com>